# SmartRouter_Pipeline

./: .dockerignore  .gitignore  01_churn_data_analysis.ipynb  02_train_roberta_classifier.py  03_dynamic_router_pipeline.py  Dockerfile  README.md  pyproject.toml
research/: 01_data_preprocessing.ipynb  02_eda_problem_definition.ipynb  03_feature_importance.ipynb  04_data_reverse_engineering.ipynb  05_model_training_final.ipynb  06_threshold_tuning.ipynb  07_inference_generation.ipynb  08_final_evaluation.ipynb
scratch/: export_onnx.py
scripts/: airflow_dag.py  aws_deploy.tf
src/smartrouter/: __init__.py  main.py
src/smartrouter/api/: __init__.py  routes.py
src/smartrouter/core/: __init__.py  config.py  logger.py
src/smartrouter/router/: __init__.py  base.py  dynamic.py
src/smartrouter/services/: __init__.py  azure_generator.py  base.py  bedrock_generator.py
src/smartrouter/static/: index.html
tests/: test_api.py  test_router.py
