[project]
name = "smartrouter-pipeline"
version = "2.0.0"
description = "SmartRouter: Cost-Quality Optimized LLM Dynamic Routing Pipeline"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "boto3>=1.34.0",
    "torch==2.5.0",
    "transformers>=4.38.0",
    "safetensors>=0.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
    "accelerate>=1.14.0",
    "onnxruntime>=1.27.0",
    "onnx>=1.22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smartrouter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.fastapi]
entrypoint = "src.smartrouter.main:app"
reload = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]


